fix bug with overlapping existing blocks moving left and right

--- a/puyo_client/src/components/Puyo.css
+++ b/puyo_client/src/components/Puyo.css
@@ -19,3 +19,7 @@ aside {
     align-items: center;
     margin: 0 0 20px 0;
 }
+
+.gameOver {
+    text-align: center;
+}
